feat: Add userGet endpoint
